changes in navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-
+    <!-- NavBar -->
     <section class="side-bar" id="side-bar">
         <div class="side-wrapper"> 
             <div class="side-navs"> 
